Order history header fixed/out of overflow container. Fix style for list's elements.

--- a/Pizzerium_app/src/components/UserPanel/UserOrders.css
+++ b/Pizzerium_app/src/components/UserPanel/UserOrders.css
@@ -6,11 +6,22 @@
     flex-direction: column;
     justify-content: center;
     margin: 1% auto;
-    max-height: 160px;
-    overflow: auto;
     padding: 3% 0;
     width: 80%;
 }
+
+.user__orders__container__list {
+    margin: 3% auto;
+    max-height: 100px;
+    overflow: auto;
+    padding: 0 3%;
+    text-align: left;
+    width: 60%;
+}
+
+    .user__orders__container__list span {
+        margin-left: 1.4rem;
+    }
 
     .user__orders__container h2 {
         color: #cc3333; 
@@ -21,3 +32,10 @@
     .user__orders__container span {
         color: rgb(177, 177, 177);
     }
+
+@media (max-width: 470px){
+    .user__orders__container__list {
+        margin-left: 15%;
+        width: 80%;
+    }
+}
